--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -2,11 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "myapp_v3.fullname" . }}
+  labels:
+    app: {{ include "myapp_v3.fullname" . }}-app
 spec:
   selector:
-    {{- include "myapp_v3.selectorLabels" . | nindent 4 }}
+    app: {{ include "myapp_v3.fullname" . }}-app
   type: {{ .Values.service.type }}
   ports:
     - protocol: TCP
       port: {{ .Values.service.port }}
       targetPort: web
+      name: serviceport
