--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -20,6 +20,7 @@ mysql:
   mysqlUser: zyzyzyz
   mysqlPassword: mypasswd
   mysqlDatabase: myapp
+  mysqlRootPassword: ""
   service:
     port: 3306
   metrics:
