--- a/benchmark/job/run-benchmark.yaml
+++ b/benchmark/job/run-benchmark.yaml
@@ -1,11 +1,11 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "myapp-benchmark2"
+  name: "myapp-benchmark"
 spec:
   template:
     metadata:
-      name: "myapp-benchmark2"
+      name: "myapp-benchmark"
     spec:
       restartPolicy: Never
       containers:
@@ -13,11 +13,11 @@ spec:
           name: myapp-initdb-job
           env:
             - name: AB_REQUEST_COUNT
-              value: "150"
+              value: "100"
             - name: AB_REQUEST_CONCURRENCY
-              value: "20"
+              value: "5"
             - name: AB_TIMEOUT
-              value: "300"
+              value: "1800"
             - name: AB_URL
-              value: "http://bit.homework/bitapp/zylyov/user/3"
+              value: "http://bit.homework/bitapp/zylyov/user/1"
   backoffLimit: 1
